--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,12 @@ dokka = "1.7.20"
 
 microutils = "0.16.12"
 
+tgbotapi = "5.2.1"
+tgbotapi-libraries = "0.8.1"
+plagubot = "3.5.0"
+
+psql = "42.5.0"
+
 dexcount = "3.1.0"
 junit_version = "4.12"
 test_ext_junit_version = "1.1.3"
@@ -28,8 +34,13 @@ kotlin-test-js = { module = "org.jetbrains.kotlin:kotlin-test-js", version.ref =
 android-test-junit = { module = "androidx.test.ext:junit", version.ref = "test_ext_junit_version" }
 android-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso_core" }
 
-microutils-startup-plugin = { module = "dev.inmo:micro_utils.startup.plugin", version.ref = "microutils" }
-microutils-startup-launcher = { module = "dev.inmo:micro_utils.startup.launcher", version.ref = "microutils" }
+plagubot-plugin = { module = "dev.inmo:plagubot.plugin", version.ref = "plagubot" }
+plagubot-bot = { module = "dev.inmo:plagubot.bot", version.ref = "plagubot" }
+
+tgbotapi-libraries-resender = { module = "dev.inmo:tgbotapi.libraries.resender", version.ref = "tgbotapi-libraries" }
+tgbotapi = { module = "dev.inmo:tgbotapi", version.ref = "tgbotapi" }
+
+psql = { module = "org.postgresql:postgresql", version.ref = "psql" }
 
 # buildscript classpaths
 
