--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,9 @@ plagubot = "3.5.0"
 
 psql = "42.5.0"
 
+moko-resources = "0.20.1"
+ksp = "1.7.22-1.0.8"
+
 dexcount = "3.1.0"
 junit_version = "4.12"
 test_ext_junit_version = "1.1.3"
@@ -37,10 +40,17 @@ android-test-espresso-core = { module = "androidx.test.espresso:espresso-core", 
 plagubot-plugin = { module = "dev.inmo:plagubot.plugin", version.ref = "plagubot" }
 plagubot-bot = { module = "dev.inmo:plagubot.bot", version.ref = "plagubot" }
 
+microutils-koin = { module = "dev.inmo:micro_utils.koin", version.ref = "microutils" }
+microutils-koin-generator = { module = "dev.inmo:micro_utils.koin.generator", version.ref = "microutils" }
+
 tgbotapi-libraries-resender = { module = "dev.inmo:tgbotapi.libraries.resender", version.ref = "tgbotapi-libraries" }
 tgbotapi = { module = "dev.inmo:tgbotapi", version.ref = "tgbotapi" }
 
 psql = { module = "org.postgresql:postgresql", version.ref = "psql" }
+
+moko-resources = { module = "dev.icerock.moko:resources", version.ref = "moko-resources" }
+
+ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
 
 # buildscript classpaths
 
@@ -49,6 +59,8 @@ android-dexcount = { module = "com.getkeepsafe.dexcount:dexcount-gradle-plugin",
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-serialization-plugin = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
 kotlin-dokka-plugin = { module = "org.jetbrains.dokka:dokka-gradle-plugin", version.ref = "dokka" }
+moko-resources-plugin = { module = "dev.icerock.moko:resources-generator", version.ref = "moko-resources" }
+kotlin-ksp-plugin = { module = "com.google.devtools.ksp:symbol-processing-gradle-plugin", version.ref = "ksp" }
 
 [plugins]
 
