--- a/template/build.gradle
+++ b/template/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id "org.jetbrains.kotlin.multiplatform"
     id "org.jetbrains.kotlin.plugin.serialization"
+    id "com.google.devtools.ksp"
 }
 
+apply plugin: "dev.icerock.mobile.multiplatform-resources"
 apply from: "$mppJavaProjectPresetPath"
 
 kotlin {
@@ -10,7 +12,20 @@ kotlin {
         commonMain {
             dependencies {
                 api project(":tasks_bot.common")
+                api libs.moko.resources
             }
         }
     }
+}
+
+dependencies {
+    add("kspCommonMainMetadata", libs.microutils.koin.generator)
+}
+
+ksp {
+}
+
+multiplatformResources {
+    multiplatformResourcesPackage = "$group.${project.name}" // required
+    multiplatformResourcesClassName = "template_resources" // optional, default MR
 }
