add work with teachers teachers

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -13,7 +13,10 @@ kotlin {
             dependencies {
                 api libs.plagubot.plugin
                 api libs.microutils.koin
+                api libs.microutils.repos.common
+                api libs.microutils.repos.cache
                 api libs.tgbotapi
+                api libs.plagubot.plugins.commands
                 api libs.moko.resources
             }
         }
