--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
         mavenLocal()
         mavenCentral()
         google()
+        maven { url "https://git.inmo.dev/api/packages/InsanusMokrassar/maven" }
     }
 }
 
