now you may create your course

--- a/launcher/sample.config.json
+++ b/launcher/sample.config.json
@@ -9,6 +9,7 @@
   "plugins": [
     "center.sciprog.tasks_bot.common.JvmPlugin",
     "center.sciprog.tasks_bot.teachers.JvmPlugin",
+    "center.sciprog.tasks_bot.courses.JvmPlugin",
     "dev.inmo.plagubot.plugins.commands.CommandsPlugin"
   ],
   "supervisor": 123456789,
