--- a/launcher/build.gradle
+++ b/launcher/build.gradle
@@ -7,6 +7,7 @@ plugins {
 dependencies {
     api project(":tasks_bot.common")
     api project(":tasks_bot.teachers")
+    api project(":tasks_bot.courses")
 
     api libs.plagubot.bot
     api libs.psql
