--- a/common/build.gradle
+++ b/common/build.gradle
@@ -15,6 +15,7 @@ kotlin {
                 api libs.microutils.koin
                 api libs.microutils.repos.common
                 api libs.microutils.repos.cache
+                api libs.microutils.fsm.repos.common
                 api libs.tgbotapi
                 api libs.plagubot.plugins.commands
                 api libs.moko.resources
