--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,28 @@
 [versions]
 
-kotlin = "1.7.22"
-kotlin-serialization = "1.4.1"
+kotlin = "1.8.10"
+kotlin-serialization = "1.5.0"
 
 dokka = "1.7.20"
 
-microutils = "0.16.13-branch_0.16.13-build375"
+microutils = "0.17.0"
 
-tgbotapi = "5.2.1"
-tgbotapi-libraries = "0.8.1"
-plagubot = "3.5.0"
-plagubot-plugins = "0.8.1"
+tgbotapi = "6.0.0"
+tgbotapi-libraries = "0.9.0"
+plagubot = "4.0.0"
+plagubot-plugins = "0.9.0"
 
 psql = "42.5.0"
 
 moko-resources = "0.20.1"
-ksp = "1.7.22-1.0.8"
+ksp = "1.8.10-1.0.9"
 
 dexcount = "3.1.0"
 junit_version = "4.12"
 test_ext_junit_version = "1.1.3"
 espresso_core = "3.4.0"
 
-android-gradle-plugin = "7.3.0"
+android-gradle-plugin = "7.3.1"
 android-minSdk = "21"
 android-compileSdk = "33"
 android-buildTools = "33.0.1"
