--- a/courses/build.gradle
+++ b/courses/build.gradle
@@ -14,6 +14,7 @@ kotlin {
                 api project(":tasks_bot.common")
                 api project(":tasks_bot.teachers")
                 api libs.moko.resources
+                api libs.plagubot.plugins.inline.buttons
             }
         }
     }
