--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ kotlin-serialization = "1.5.0"
 
 dokka = "1.8.10"
 
-microutils = "0.17.1"
+microutils = "0.17.4"
 
 tgbotapi = "6.1.0"
 tgbotapi-libraries = "0.9.4"
@@ -48,6 +48,7 @@ microutils-repos-common = { module = "dev.inmo:micro_utils.repos.common", versio
 microutils-repos-cache = { module = "dev.inmo:micro_utils.repos.cache", version.ref = "microutils" }
 microutils-repos-generator = { module = "dev.inmo:micro_utils.repos.generator", version.ref = "microutils" }
 microutils-fsm-repos-common = { module = "dev.inmo:micro_utils.fsm.repos.common", version.ref = "microutils" }
+microutils-serialization-mapper = { module = "dev.inmo:micro_utils.serialization.mapper", version.ref = "microutils" }
 
 tgbotapi-libraries-resender = { module = "dev.inmo:tgbotapi.libraries.resender", version.ref = "tgbotapi-libraries" }
 tgbotapi = { module = "dev.inmo:tgbotapi", version.ref = "tgbotapi" }
