--- a/launcher/sample.config.json
+++ b/launcher/sample.config.json
@@ -10,6 +10,7 @@
     "center.sciprog.tasks_bot.common.JvmPlugin",
     "center.sciprog.tasks_bot.teachers.JvmPlugin",
     "center.sciprog.tasks_bot.courses.JvmPlugin",
+    "center.sciprog.tasks_bot.tasks.JvmPlugin",
     "center.sciprog.tasks_bot.users.JvmPlugin",
     "dev.inmo.plagubot.plugins.commands.CommandsPlugin"
   ],
