--- a/template/build.gradle
+++ b/template/build.gradle
@@ -27,6 +27,6 @@ ksp {
 }
 
 multiplatformResources {
-    multiplatformResourcesPackage = "$group.${project.name}" // required
+//    multiplatformResourcesPackage = "$group.${project.name}" // required
     multiplatformResourcesClassName = "template_resources" // optional, default MR
 }
