--- a/courses/build.gradle
+++ b/courses/build.gradle
@@ -29,6 +29,6 @@ ksp {
 }
 
 multiplatformResources {
-    multiplatformResourcesPackage = "$group.${project.name}" // required
+//    multiplatformResourcesPackage = "$group.${project.name}" // required
     multiplatformResourcesClassName = "courses_resources" // optional, default MR
 }
