--- a/tasks/build.gradle
+++ b/tasks/build.gradle
@@ -28,6 +28,6 @@ ksp {
 }
 
 multiplatformResources {
-    multiplatformResourcesPackage = "$group.${project.name}" // required
+//    multiplatformResourcesPackage = "$group.${project.name}" // required
     multiplatformResourcesClassName = "tasks_resources" // optional, default MR
 }
