--- a/tasks/build.gradle
+++ b/tasks/build.gradle
@@ -4,7 +4,6 @@ plugins {
     id "com.google.devtools.ksp"
 }
 
-apply plugin: "dev.icerock.mobile.multiplatform-resources"
 apply from: "$mppJavaProjectPresetPath"
 
 kotlin {
@@ -16,6 +15,9 @@ kotlin {
                 api libs.moko.resources
             }
         }
+        jvmMain {
+            dependsOn(commonMain)
+        }
     }
 }
 
@@ -25,9 +27,4 @@ dependencies {
 }
 
 ksp {
-}
-
-multiplatformResources {
-//    multiplatformResourcesPackage = "$group.${project.name}" // required
-    multiplatformResourcesClassName = "tasks_resources" // optional, default MR
 }
