--- a/template/build.gradle
+++ b/template/build.gradle
@@ -15,6 +15,9 @@ kotlin {
                 api libs.moko.resources
             }
         }
+        jvmMain {
+            dependsOn(commonMain)
+        }
     }
 }
 
