--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         mavenCentral()
         mavenLocal()
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://nexus.inmo.dev/repository/maven-releases" }
     }
 
     dependencies {
@@ -12,6 +13,7 @@ buildscript {
         classpath libs.kotlin.dokka.plugin
         classpath libs.moko.resources.plugin
         classpath libs.kotlin.ksp.plugin
+        classpath libs.libres.plugin
     }
 }
 
@@ -20,7 +22,7 @@ allprojects {
         mavenLocal()
         mavenCentral()
         google()
-        maven { url "https://git.inmo.dev/api/packages/InsanusMokrassar/maven" }
+        maven { url "https://nexus.inmo.dev/repository/maven-releases" }
     }
 }
 
