now fix of build

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,24 @@
 [versions]
 
-kotlin = "2.0.10"
-kotlin-serialization = "1.7.1"
+kotlin = "2.0.20"
+kotlin-serialization = "1.7.2"
 
 dokka = "1.9.20"
 
-microutils = "0.22.0"
+microutils = "0.22.2"
 
-tgbotapi = "17.0.0"
-tgbotapi-libraries = "0.22.0"
-plagubot = "9.1.0"
-plagubot-plugins = "0.20.0"
+ktor = "2.3.12"
+
+tgbotapi = "18.2.0"
+tgbotapi-libraries = "0.23.0"
+plagubot = "9.2.0"
+plagubot-plugins = "0.21.0"
+
+compose = "1.7.0-alpha03"
 
 psql = "42.6.0"
 
-ksp = "2.0.10-1.0.24"
+ksp = "2.0.20-1.0.24"
 
 junit_version = "4.12"
 
@@ -34,14 +38,19 @@ plagubot-bot = { module = "dev.inmo:plagubot.bot", version.ref = "plagubot" }
 microutils-koin = { module = "dev.inmo:micro_utils.koin", version.ref = "microutils" }
 microutils-resources = { module = "dev.inmo:micro_utils.resources", version.ref = "microutils" }
 microutils-koin-generator = { module = "dev.inmo:micro_utils.koin.generator", version.ref = "microutils" }
+microutils-ktor-server = { module = "dev.inmo:micro_utils.ktor.server", version.ref = "microutils" }
 microutils-repos-common = { module = "dev.inmo:micro_utils.repos.common", version.ref = "microutils" }
 microutils-repos-cache = { module = "dev.inmo:micro_utils.repos.cache", version.ref = "microutils" }
 microutils-repos-generator = { module = "dev.inmo:micro_utils.repos.generator", version.ref = "microutils" }
 microutils-fsm-repos-common = { module = "dev.inmo:micro_utils.fsm.repos.common", version.ref = "microutils" }
 microutils-serialization-mapper = { module = "dev.inmo:micro_utils.serialization.mapper", version.ref = "microutils" }
+microutils-startup-launcher = { module = "dev.inmo:micro_utils.startup.launcher", version.ref = "microutils" }
+
+ktor-server-engine-netty = { module = "io.ktor:ktor-server-netty", version.ref = "ktor" }
 
 tgbotapi-libraries-resender = { module = "dev.inmo:tgbotapi.libraries.resender", version.ref = "tgbotapi-libraries" }
 tgbotapi = { module = "dev.inmo:tgbotapi", version.ref = "tgbotapi" }
+tgbotapi-webapps = { module = "dev.inmo:tgbotapi.webapps", version.ref = "tgbotapi" }
 plagubot-plugins-commands = { module = "dev.inmo:plagubot.plugins.commands", version.ref = "plagubot-plugins" }
 plagubot-plugins-inline-buttons = { module = "dev.inmo:plagubot.plugins.inline.buttons", version.ref = "plagubot-plugins" }
 
@@ -60,3 +69,6 @@ kotlin-ksp-plugin = { module = "com.google.devtools.ksp:symbol-processing-gradle
 
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+
+compose = { id = "org.jetbrains.compose", version.ref = "compose" }
+kt-jb-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
