--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,9 @@ String[] includes = [
     ":courses",
     ":users",
     ":tasks",
+    ":webapp:bot",
+    ":webapp:client",
+    ":webapp:server",
 //    ":users:courses",
 ]
 
