add webapps (at least, as a sample)

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -11,6 +11,7 @@ kotlin {
         commonMain {
             dependencies {
                 api libs.plagubot.plugin
+                implementation libs.plagubot.bot
                 api libs.microutils.koin
                 api libs.microutils.repos.common
                 api libs.microutils.repos.cache
