--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ String[] includes = [
     ":courses",
     ":users",
     ":tasks",
+    ":webapp:common",
     ":webapp:bot",
     ":webapp:client",
     ":webapp:server",
