--- a/webapp/bot/build.gradle
+++ b/webapp/bot/build.gradle
@@ -10,7 +10,7 @@ kotlin {
     sourceSets {
         commonMain {
             dependencies {
-                api project(":tasks_bot.common")
+                api project(":tasks_bot.webapp.common")
             }
         }
     }
