start adding of tasks request sample in webapp

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ String[] includes = [
     ":courses",
     ":users",
     ":tasks",
+    ":tasks:webapp",
     ":webapp:common",
     ":webapp:bot",
     ":webapp:client",
