--- a/templates/webapp_plugin/build.gradle
+++ b/templates/webapp_plugin/build.gradle
@@ -4,16 +4,18 @@ plugins {
     id "com.google.devtools.ksp"
 }
 
-apply from: "$mppJavaProjectPresetPath"
+apply from: "$mppProjectWithSerializationPresetPath"
 
 kotlin {
     sourceSets {
         commonMain {
             dependencies {
                 api project(":tasks_bot.common")
-                api project(":tasks_bot.courses")
                 api project(":tasks_bot.webapp.common")
             }
+        }
+        jvmMain {
+            dependsOn(commonMain)
         }
     }
 }
