small refactor of tasks drawer

--- a/common/webapp/build.gradle
+++ b/common/webapp/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id "org.jetbrains.kotlin.multiplatform"
     id "org.jetbrains.kotlin.plugin.serialization"
     id "com.google.devtools.ksp"
+    alias(libs.plugins.compose)
+    alias(libs.plugins.kt.jb.compose)
 }
 
 apply from: "$mppProjectWithSerializationPresetPath"
@@ -12,6 +14,12 @@ kotlin {
             dependencies {
                 api project(":tasks_bot.common.common")
                 api libs.tgbotapi.webapps
+                api(compose.runtime)
+            }
+        }
+        jsMain {
+            dependencies {
+                api compose.web.core
             }
         }
     }
