--- a/launcher/build.gradle
+++ b/launcher/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     api project(":tasks_bot.users.bot")
     api project(":tasks_bot.webapp.server")
     api project(":tasks_bot.webapp.bot")
+    api project(":tasks_bot.webapp.client")
 
     api libs.plagubot.bot
     api libs.psql
