--- a/launcher/sample.config.json
+++ b/launcher/sample.config.json
@@ -17,6 +17,7 @@
     "center.sciprog.tasks_bot.common.webapp.JvmPlugin",
     "center.sciprog.tasks_bot.webapp.server.WebAppServerPlugin",
     "center.sciprog.tasks_bot.webapp.bot.WebAppPlugin",
+    "center.sciprog.tasks_bot.webapp.client.JvmPlugin",
 
     "dev.inmo.plagubot.plugins.commands.CommandsPlugin"
   ],
