--- a/common/webapp/build.gradle
+++ b/common/webapp/build.gradle
@@ -14,6 +14,8 @@ kotlin {
             dependencies {
                 api project(":tasks_bot.common.common")
                 api libs.tgbotapi.webapps
+                api libs.navigation
+                api libs.navigation.mermaid
                 api(compose.runtime)
             }
         }
